@@ -23,6 +23,7 @@ Pint Changelog
 - Fix handling of extra arguments in conversion with enabled contexts (#2172)
 - Fix swapped left and right arguments in interp (#2187)
 - Fix formatted scientific notation bug in Python 3.13 (#2168)
+- Fix ability to add dB units, and to add dB (dimensionless) to referenced dB units, such as dBm or dBW (#1160)
 
 
 0.24.4 (2024-11-07)
